--- a/lab05/little project/HEXrun.qsf
+++ b/lab05/little project/HEXrun.qsf
@@ -498,4 +498,6 @@ set_location_assignment PIN_Y7 -to SRAM_LB_N
 set_location_assignment PIN_T8 -to SRAM_OE_N
 set_location_assignment PIN_W7 -to SRAM_UB_N
 set_location_assignment PIN_AA10 -to SRAM_WE_N
+set_global_assignment -name USE_CONFIGURATION_DEVICE ON
+set_global_assignment -name STRATIX_CONFIGURATION_DEVICE EPCS16
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
